--- a/index.html
+++ b/index.html
@@ -74,18 +74,23 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
                             <div class="subheading mb-3">Fiserv</div>
-                            <ul>
-                            <p>
-                                <!-- <a href="https://github.com/google/data-layer-helper"><i class="fab fa-github"></i></a> -->
-                                <li>Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.</li>
-                            </p>
-                            <p>
-                                <li>Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.</li>
-                            </p>
-                            <p>
-                                <li>Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.</li>
-                            </p>
-                            </ul>
+                            
+                            <ul class="fa-ul mb-0">
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
+                                    </li>   
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
+                                    </li>
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
+                                    </li>
+                                </ul>                                                                                                                                                                          
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
                     </div>
