--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
                             
                             <ul class="fa-ul mb-0">
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
                                     </li>   
                                     <br>
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
                                     </li>
                                     <br>
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-terminal"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
                                     </li>
                                 </ul>                                                                                                                                                                          
@@ -231,7 +231,7 @@
                                     <br>
                                     <li>
                                     <span class="fa-li"><i class="fas fa-award"></i></span>
-                                    Fortunate to be named the grand prize winners of the Veeva Systems challenge at HACK OHI/O 2021.
+                                    Named the grand prize winners of the Veeva Systems challenge at HACK OHI/O 2021.
                                     </li>
                                 </ul>                                                                                                          
                         </div>
