--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                                     </li>
                                     <br>
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-angle-double-right"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
                                     </li>
                                 </ul>                                                                                                                                                                          
