--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
                             
                             <ul class="fa-ul mb-0">
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-angle-double-right"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
                                     </li>   
                                     <br>
                                     <li>
-                                    <span class="fa-li"><i class="fas fa-angle-double-right"></i></span>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
                                     Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
                                     </li>
                                     <br>
