--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fas fa-file-alt"></i></a></span>
-                                    Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers. See Luyu Liu and Harvey J. Miller's work <a href="assets/wait-time.pdf">here</a> for more insight into this particular area of research.
+                                    Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers. See Luyu Liu and Harvey J. Miller's work <a href="assets/wait-time.pdf">[HERE]</a> for more insight into this particular area of research.
                                     </li>
                                     <br>
                                     <li>
