--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><a href="https://www.overleaf.com/read/tymxdvyrvhvx"><i class="fas fa-file-alt"></i></a></span>
-                                    Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming.
+                                    Introduced linear optimization problems over polar convex regions by incorporating the graphical method for linear programming. See the following papers for more information about LP and polar convexity: <a href="assets/Linear Programming.pdf">[LP]</a> <a href="assets/The Role of Polar Convexity.pdf">[Polar Convexity]</a> <a href="assets/Duality between loci of complex polynomials.pdf">[Loci Duality]</a>
                                     </li>                
                                 </ul>                                                        
                         </div>
