--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
-                                            <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/fiserv.png" alt="" /></span>
+                                            <span class="d-none d-lg-block"><img id='profile-image-circle' src="assets/fiserv.png" alt="" /></span>
 <div class="subheading mb-3">Fiserv</div>
                             
                             <ul class="fa-ul mb-0">
