--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
                                 <div class="subheading mb-3">Fiserv</div>
-                                    <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 50px; max-width: 50px;" src="assets/fiserv.png" alt="" /></span>                            
+                                    <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 50px; max-width: 50px;" src="assets/fiserv.png" alt="" /></span>
+                                    <br>
                             <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
@@ -116,7 +117,7 @@
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><a href="https://www.overleaf.com/read/hdhvxpdvpfsy"><i class="fas fa-file-alt"></i></a></span>
-                                    Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers. See Luyu Liu and Harvey J. Miller's work <a href="assets/wait-time.pdf">[HERE]</a> for more insight into this particular area of research.
+                                    Applied Queuing Theory principles to model interactions observed in the local COTA bus system in Columbus, Ohio. Performed empirical analysis on the wait time distribution of passengers. See Liu and Miller's work <a href="assets/wait-time.pdf">[HERE]</a> for more insight into this area of research.
                                     </li>
                                     <br>
                                     <li>
