--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineering Intern</h3>
-                                <div class="subheading mb-3">Fiserv</div>
+                                <!-- <div class="subheading mb-3">Fiserv</div> -->
                                     <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 50px; max-width: 50px;" src="assets/fiserv.png" alt="" /></span>
                                     <br>
                             <ul class="fa-ul mb-0">
