--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Incoming Software Engineering Intern</h3>
                             <!-- <div class="subheading mb-3">JPMorgan Chase and Co.</div> -->
-                            <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 250px; max-width: 250px;" src="assets/JPM.png" alt="" /></span>
+                            <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 250px; max-width: 250px;" src="assets/JPM.jpg" alt="" /></span>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
                     </div>
