--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Incoming Software Engineering Intern</h3>
                             <!-- <div class="subheading mb-3">JPMorgan Chase and Co.</div> -->
-                            <span class="d-none d-lg-block"><img id='profile-image-circle' style="max-height: 250px; max-width: 250px;" src="assets/JPM.jpg" alt="" /></span>
+                            <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/JPM.jpg" alt="" /></span>
+                            <br>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
                     </div>
@@ -76,7 +77,7 @@
                             <h3 class="mb-0">Software Engineering Intern</h3>
                                 <!-- <div class="subheading mb-3">Fiserv</div> -->
                                     <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/fiserv.png" alt="" /></span>
-                                    
+                                    <br>
                             <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
