--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                             <br>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Columbus, Ohio Metropolitan Area</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
