--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                             <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/JPM.jpg" alt="" /></span>
                             <br>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div><br>
-                        <div class="flex-shrink-0"><span class="text-primary">Columbus, Ohio Metropolitan Area</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
