--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                     <div class="social-icons">
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" data-toggle="tooltip" title="My updated resume" href="https://www.overleaf.com/read/qcjngvzpscbh"><i class="far fa-file"></i></a>
-                    </div>
+                        <a class="social-icon" data-toggle="tooltip" title="My updated resume" href="assets/Blake_Whitman_Resume.pdf"><i class="far fa-file"></i></a>
+                    </div>                                
                 </div>
             </section>
             <hr class="m-0" />
