--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
                     <p class="lead mb-5"><i class="far fa-hand-spock"></i> I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
-                    <div class="social-icons">
+                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> Feel free to connect with me by clicking on the LinkedIn or GitHub links below if you are interested.</p>
+                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> Additionally, I welcome any inquiries. Please reach out via email with anything on your mind!.</p>
+                    <div class="social-icons">                        
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My updated resume" href="assets/Blake_Whitman_Resume.pdf"><i class="far fa-file"></i></a>
