--- a/index.html
+++ b/index.html
@@ -251,9 +251,24 @@
                                     This website! It was built using a combination of JS, CSS, and Bootstrap libraries. You can click the mouse to the left to view the source code. Thank you for visiting :)
                                     </li>
                                 </ul>                                          
-                        </div>
+                            </div>
                         <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
                     </div>
+                    
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Automated University Course Scheduler</h3>
+                            <div class="subheading mb-3">Python, Beautiful Soup</div>
+                                <ul class="fa-ul mb-0">
+                                    <li>
+                                    <span class="fa-li"><a href="https://github.com/blake-whitman/automated-course-scheduler"><i class="fab fa-github"></i></a></span>
+                                    A Python bot that automatically enrolls a user in courses. If a user desires, it is possible to tailor its usage to fit one's course needs and pertinent school.
+                                    </li>
+                                </ul>                                          
+                            </div>
+                        <div class="flex-shrink-0"><span class="text-primary">Jan 2022</span></div>
+                    </div>
+                    
                 </div>
             </section>
             <section class="resume-section" id="reading">
