--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
                     
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Applications of Stochastic Mixed-Integer Second-Order Cone Optimization</h3>
+                            <h3 class="mb-0">Research in Stochastic Mixed-Integer Second-Order Cone Optimization</h3>
                             <div class="subheading mb-3">Under Baha Alzalg, Hadjer Alioui</div>
                             
                                 <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><a href="assets/ACCESS3139915.pdf"><i class="fas fa-file-alt"></i></a></span>
-                                    Co-author and part of the peer review process of a paper on SMISOCP. Click the file icon to the left to read more about our work.
+                                    Co-author and part of the peer review process of a paper on SMISOCP. Click the file icon to the left to check out our work.
                                     </li>                
                                 </ul>                                                        
                         </div>
