--- a/index.html
+++ b/index.html
@@ -66,33 +66,49 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Incoming Software Engineering Intern</h3>
+                            <h3 class="mb-0">Software Engineer Intern</h3>
                             <!-- <div class="subheading mb-3">JPMorgan Chase and Co.</div> -->
                             <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/JPM.jpg" alt="" /></span>
                             <br>
+                            <ul class="fa-ul mb-0">
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Designed a distributable framework system to enhance logging and trend production behaviors for enumerated data classifications with enumerated dispositions over time, allowing for early detection of unexpected behaviors even when a system avoids failing in the traditional sense
+                                    </li>   
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Established baselines using statistical analyses and compared current behaviors to previously harvested data to trigger an alert when significant deviations were detected
+                                    </li>
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Introduced additional features including quiescing, re-baselining, and silent windows which improved visibility to integral system behaviors and performance
+                                    </li>
+                                </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2022 - August 2022</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Software Engineering Intern</h3>
+                            <h3 class="mb-0">Software Engineer Intern</h3>
                                 <!-- <div class="subheading mb-3">Fiserv</div> -->
                                     <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/fiserv.png" alt="" /></span>
                                     <br>
                             <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
-                                    Created and reported specific metrics to senior management. Used Python and SQL to automate reporting of agent hygiene and distribution among approximately 100,000 workstations.
+                                    Bootstrapped a service to audit 2,400 internal Fiserv applications, verify their SSO/MFA compliance, and ensure proper authentication security coverage
                                     </li>   
                                     <br>
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
-                                    Built an interactive dashboard that displays trends of version distribution and agent hygiene. Updated daily with automated script.
+                                    Implemented multi-threaded crawler using Python that pinged 90,000 DNS records to identify a subset of valid web URLs; multi-threading reduced runtime by 87.5%
                                     </li>
                                     <br>
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
-                                    Work alongside development team and business analysts. Participated in the product design process including requirement, design, and other document reviews.
+                                    Devised and initialized a SQLite database schema that stored script results and automatically exported into a CSV with readable layout; used by 15,000 stakeholders
                                     </li>
                                 </ul>                                                                                                                                                                          
                         </div>
