--- a/index.html
+++ b/index.html
@@ -67,6 +67,21 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
+                                <!-- <div class="subheading mb-3">Coinbase</div> -->
+                                    <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/download.jpg" alt="" /></span>
+                                    <br>
+                            <ul class="fa-ul mb-0">
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Tech Stack: Go, Ruby, and JavaScript
+                                    </li>
+                                </ul>                                                                                                                                                                          
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2022 - December 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer Intern</h3>
                             <!-- <div class="subheading mb-3">JPMorgan Chase and Co.</div> -->
                             <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/JPM.jpg" alt="" /></span>
                             <br>
@@ -114,7 +129,6 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">June 2021 - August 2021</span></div>
                     </div>
-                    
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Research in Stochastic Mixed-Integer Second-Order Cone Optimization</h3>
