--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Engineer Intern</h3>
                                 <!-- <div class="subheading mb-3">Coinbase</div> -->
-                                    <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/download.jpg" alt="" /></span>
+                                    <span class="d-none d-lg-block"><img id='profile-image-circle' class="img-fluid img-profile rounded-circle mx-auto mb-2" style="max-height: 100px; max-width: 100px;" src="assets/coinbase-logo.jpg" alt="" /></span>
                                     <br>
                             <ul class="fa-ul mb-0">
                                     <li>
