--- a/index.html
+++ b/index.html
@@ -73,7 +73,12 @@
                             <ul class="fa-ul mb-0">
                                     <li>
                                     <span class="fa-li"><i class="fas fa-angle-right"></i></span>
-                                    Tech Stack: Go, Ruby, and JavaScript
+                                    Data Team: Machine Learning Systems and Services
+                                    </li>
+                                    <br>
+                                    <li>
+                                    <span class="fa-li"><i class="fas fa-angle-right"></i></span>
+                                    Iterated and improved upon a price alerts targeting model that decides in which order to send change-in-price notifications to Coinbase users
                                     </li>
                                 </ul>                                                                                                                                                                          
                         </div>
