--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Blake
-                        <span class="text-primary">Whitman</span>
+                        Blake Whitman
                     </h1>
                     <div class="subheading mb-5">
                         (419) 283-8193 ·
