--- a/index.html
+++ b/index.html
@@ -49,8 +49,21 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
-                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> I am a dual major in Theoretical Mathematics and Computer Science (AI Specialization) at the Ohio State University, with an intended graduation date of May 2023. I am interested in graph theory, optimization, and machine learning.</p>
-                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> I welcome any inquiries you may have. Please do not hesitate to reach out via email if you're interested in connecting!</p>
+                    
+                    <p>I help scientists and researchers make real business impact through good engineering.</p>
+
+          <p>I believe that relationships matter more than org charts, learning happens best through intelligent action,
+          and that teamwork is leadership. Some things I'm proud of include the <a rel="nofollow" href="http://code2college.org/"
+          rel="nofollow">students I have helped learn to code</a>, <a href="projects/pun-finder.html">my pun
+          generator</a>, and a <a href="articles/how-to-handle-class-imbalance.html">talk I delivered</a> at one of the
+          largest data science conferences.</p>
+
+          <p>My interests include trustworthy models, imbalanced data, and (of course) putting machine learning into
+          production.</p>
+
+          <p>I studied computer science at Baylor University and have worked for companies including TripAdvisor and
+          Indeed. I currently work as a Machine Learning Engineer in Austin, TX.</p>
+                    
                     <div class="social-icons">                        
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" data-toggle="tooltip" title="My github, containing most of my projects." href="https://github.com/blake-whitman"><i class="fab fa-github"></i></a>
