--- a/index.html
+++ b/index.html
@@ -49,17 +49,13 @@
                         (419) 283-8193 ·
                         <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
                     </div>
+
                     
-                    <p>I help scientists and researchers make real business impact through good engineering.</p>
-
-          <p>I believe that relationships matter more than org charts, learning happens best through intelligent action,
-          largest data science conferences.</p>
-
-          <p>My interests include trustworthy models, imbalanced data, and (of course) putting machine learning into
-          production.</p>
-
-          <p>I studied computer science at Baylor University and have worked for companies including TripAdvisor and
-          Indeed. I currently work as a Machine Learning Engineer in Austin, TX.</p>
+                    <p class="lead mb-5"><i class="far fa-hand-spock"></i> 
+                        I help researchers and developers leverage technology to drive real business impact. I believe that teamwork and mentorship are critical to a functional org, and that learning happens best through planned action. 
+                        My interests include optimization, embedded systems, and building production ready machine learning models. I studied computer science at Ohio State University and have worked for companies including JPMorgan Chase and Coinbase. 
+                        I will be graduating in May 2023 and am currently searching for new graduate roles in NYC.
+                    </p>
                     
                     <div class="social-icons">                        
                         <a class="social-icon" data-toggle="tooltip" title="My Linkedin" href="https://www.linkedin.com/in/blake-whitman-85301b1a4/"><i class="fab fa-linkedin-in"></i></a>
