--- a/index.html
+++ b/index.html
@@ -378,10 +378,6 @@
                             <span class="fa-li"><i class="fas fa-chart-line"></i></span>
                             Linear Algebra Done Right (Sheldon Axler)
                         </li>
-                    </ul>
-                    <br>
-                    <div class="subheading mb-3">Data Science</div>
-                    <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-chart-bar"></i></span>
                             Storytelling with Data (Cole Nussbaumer Knaflic)
@@ -403,12 +399,16 @@
                             The Structure of Scientific Revolutions (Thomas S. Kuhn)
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-book-reader"></i></span>
-                            Freakonomics: A rogue economist explores the hidden side of everything (Steven D. Levitt & Stephen J. Dubner)
+                            <span class="fa-li"><i class="fas fa-book-open"></i></span>
+                            Freakonomics (Steven D. Levitt & Stephen J. Dubner)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book-reader"></i></span>
-                            Super Freakonomics: Global cooling, patriotic prostitutes and why suicide bombers should buy life insurance (Steven D. Levitt & Stephen J. Dubner)
+                            Super Freakonomics (Steven D. Levitt & Stephen J. Dubner)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="far fa-bookmark"></i></span>
+                            Think Like a Freak (Steven D. Levitt & Stephen J. Dubner)
                         </li>
                     </ul>
                 </div>
