--- a/index.html
+++ b/index.html
@@ -303,13 +303,9 @@
             
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Books in my Library</h2>
-                    <div class="subheading mb-3">Interview Preparation</div>
+                    <h2 class="mb-5">Reading</h2>
+                    <div class="subheading mb-3">Computer Science</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-book"></i></span>
-                            Cracking the Coding Interview (Gayle Laakmann McDowell)
-                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
                             Introduction to Algorithms (CLRS)
@@ -348,22 +344,6 @@
                         </li>
                     </ul>
                     <br>
-                    <div class="subheading mb-3">Quantitative Finance</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-briefcase"></i></span>
-                            Quantitative Trading: How to build your own algorithmic trading business (Ernest P. Chan)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-money-check-alt"></i></span>
-                            A Man for All Markets (Edward O. Thorp)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="far fa-money-bill-alt"></i></span>
-                            The Richest Man in Babylon (George S. Clason)
-                        </li>
-                    </ul>
-                    <br>
                     <div class="subheading mb-3">Mathematics</div>
                     <ul class="fa-ul mb-0">
                         <li>
@@ -382,9 +362,21 @@
                             <span class="fa-li"><i class="fas fa-chart-bar"></i></span>
                             Storytelling with Data (Cole Nussbaumer Knaflic)
                         </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-briefcase"></i></span>
+                            Quantitative Trading: How to build your own algorithmic trading business (Ernest P. Chan)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-money-check-alt"></i></span>
+                            A Man for All Markets (Edward O. Thorp)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="far fa-money-bill-alt"></i></span>
+                            The Richest Man in Babylon (George S. Clason)
+                        </li>
                     </ul>
                     <br>
-                    <div class="subheading mb-3">Behavioral Economics and Psychology</div>
+                    <div class="subheading mb-3">Behavioral Science</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="far fa-bookmark"></i></span>
