--- a/index.html
+++ b/index.html
@@ -263,39 +263,15 @@
             
             <section class="resume-section" id="articles">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-java"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-python"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-cuttlefish"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-git"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Coursework</div>
+                    <!--<h2 class="mb-5">Articles</h2>-->
+                    <div class="subheading mb-3">Computer Science</div>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-times"></i></span>
-                            Calc I-III, Linear Algebra/Diff Eq, Abstract Algebra I/II, Stats I/II, Interest Theory
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
-                            Data Structures, Algorithms, Software Design, Systems, Networking
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-robot"></i></span>
-                            Intro to AI
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-file-alt"></i></span>
-                            <a href="https://www.overleaf.com/read/tbskgwcfmgph">
-                                SWE Ethics
-                            </a>
-                        </li>
+                        <li><a href="articles/trustworthy-models.html">Building Trustworthy Models</a></li>
+                    </ul>
+                    <br>
+                    <div class="subheading mb-3">Mathematics</div>
+                    <ul class="fa-ul mb-0">
+                        <li><a href="articles/trustworthy-models.html">Building Trustworthy Models</a></li>
                     </ul>
                 </div>
             </section>
@@ -303,7 +279,7 @@
             
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Reading</h2>
+                    <!--<h2 class="mb-5">Reading</h2>-->
                     <div class="subheading mb-3">Computer Science</div>
                     <ul class="fa-ul mb-0">
                         <li>
