--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                     <!--<h2 class="mb-5">Articles</h2>-->
                     <div class="subheading mb-3">Computer Science</div>
                     <ul class="fa-ul mb-0">
-                        <li><a href="articles/hft-ethics.html">Analyzing the Ethical Implications of High Frequency Trading Algorithms</a></li>
+                        <li><a href="articles/hft-ethics.html">Ethical Implications of High Frequency Trading Algorithms</a></li>
                     </ul>
                     <br>
                     <div class="subheading mb-3">Mathematics</div>
                     <ul class="fa-ul mb-0">
-                        <li><a href="articles/hft-ethics.html">Analyzing the Ethical Implications of High Frequency Trading Algorithms</a></li>
+                        <li><a href="articles/hft-ethics.html">Ethical Implications of High Frequency Trading Algorithms</a></li>
                     </ul>
                 </div>
             </section>
