--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         (419) 283-8193 ·
-                        <a href="mailto:whitman.124@osu.edu">whitman.124@osu.edu</a>
+                        <a href="mailto:whitman.124@osu.edu"><u>whitman.124@osu.edu</u></a>
                     </div>
 
                     
