--- a/index.html
+++ b/index.html
@@ -265,13 +265,13 @@
                 <div class="resume-section-content">
                     <!--<h2 class="mb-5">Articles</h2>-->
                     <div class="subheading mb-3">Computer Science</div>
-                    <ul class="fa-ul mb-0">
-                        <li><a href="articles/hft-ethics.html">Ethical Implications of High Frequency Trading Algorithms</a></li>
+                    <ul>
+                        <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                     </ul>
                     <br>
                     <div class="subheading mb-3">Mathematics</div>
-                    <ul class="fa-ul mb-0">
-                        <li><a href="articles/hft-ethics.html">Ethical Implications of High Frequency Trading Algorithms</a></li>
+                    <ul>
+                        <li><a href="articles/hft-ethics.html"><u>Ethical Implications of High Frequency Trading Algorithms</u></a></li>
                     </ul>
                 </div>
             </section>
