--- a/index.html
+++ b/index.html
@@ -280,23 +280,11 @@
             <section class="resume-section" id="reading">
                 <div class="resume-section-content">
                     <!--<h2 class="mb-5">Reading</h2>-->
-                    <div class="subheading mb-3">Computer Science</div>
+                    <div class="subheading mb-3">My Library</div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
                             Introduction to Algorithms (CLRS)
-                        </li>
-                    </ul>
-                    <br>
-                    <div class="subheading mb-3">Sports Analytics</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-basketball-ball"></i></span>
-                            Basketball Analytics (Stephen M. Shea & Christopher E. Baker)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-basketball-ball"></i></span>
-                            Basketabll Analytics: Spatial tracking (Stephen M. Shea)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
@@ -307,64 +295,12 @@
                             Astroball (Ben Reiter)
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
-                            Hot Stove Economics: Understanding baseball's second season (J.C. Bradbury)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-baseball-ball"></i></span>
-                            The New Bill James Historical Baseball Abstract (Bill James)
-                        </li>
-                        <li>
                             <span class="fa-li"><i class="fas fa-book-open"></i></span>
                             Scorecasting: The hidden influences behind how sports are played and games are won (Tobias J. Moskowitz & L. Jon Wertheim)
-                        </li>
-                    </ul>
-                    <br>
-                    <div class="subheading mb-3">Mathematics</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-shapes"></i></span>
-                            Flatland (Edwin A. Abbott)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-square-root-alt"></i></span>
-                            Imagining Numbers (Barry Mazur)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-chart-line"></i></span>
                             Linear Algebra Done Right (Sheldon Axler)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-chart-bar"></i></span>
-                            Storytelling with Data (Cole Nussbaumer Knaflic)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-briefcase"></i></span>
-                            Quantitative Trading: How to build your own algorithmic trading business (Ernest P. Chan)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-money-check-alt"></i></span>
-                            A Man for All Markets (Edward O. Thorp)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="far fa-money-bill-alt"></i></span>
-                            The Richest Man in Babylon (George S. Clason)
-                        </li>
-                    </ul>
-                    <br>
-                    <div class="subheading mb-3">Behavioral Science</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="far fa-bookmark"></i></span>
-                            Outliers (Malcolm Gladwell)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-bookmark"></i></span>
-                            Nudge (Richard H. Thaler & Cass R. Sunstein)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-book"></i></span>
-                            The Structure of Scientific Revolutions (Thomas S. Kuhn)
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-book-open"></i></span>
@@ -375,8 +311,24 @@
                             Super Freakonomics (Steven D. Levitt & Stephen J. Dubner)
                         </li>
                         <li>
+                            <span class="fa-li"><i class="fas fa-shapes"></i></span>
+                            Flatland (Edwin A. Abbott)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-square-root-alt"></i></span>
+                            Imagining Numbers (Barry Mazur)
+                        </li>
+                        <li>
                             <span class="fa-li"><i class="far fa-bookmark"></i></span>
-                            Think Like a Freak (Steven D. Levitt & Stephen J. Dubner)
+                            Outliers (Malcolm Gladwell)
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-bookmark"></i></span>
+                            Nudge (Richard H. Thaler & Cass R. Sunstein)
+                        </li>
+                         <li>
+                            <span class="fa-li"></span>
+                             <a href="articles/all-books.html"><u>View all</u></a>
                         </li>
                     </ul>
                 </div>
