--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                             Nudge (Richard H. Thaler & Cass R. Sunstein)
                         </li>
                          <li>
-                            <span class="fa-li"></span>
+                             <span class="fa-li"><i class="fas fa-search-plus"</i></span>
                              <a href="articles/all-books.html"><u>View all</u></a>
                         </li>
                     </ul>
